package ostashko.diploma.zerotrust.core.config;

public enum ZeroTrustMode {
    STRICT,
    BALANCED,
    DEV
}
